[package]
name = "xim-parser"
description = "XIM protocol parser"
version = "0.2.1"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition.workspace = true
publish = false
license.workspace = true

[features]
default = ["std"]
std = []
bootstrap = []

[dependencies]
bitflags = { workspace = true, default-features = false }

[dev-dependencies]
xim-ctext = { path = "../xim_ctext", version = "0.3.0" }
pretty_assertions = "1"
